--- a/index.html.template
+++ b/index.html.template
@@ -91,10 +91,6 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="dist/aris.js?{{js_signature}}"></script>
-		<script>
-		  require(['main']);
-		</script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -102,7 +98,12 @@
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 			ga('create', '{{google_analytics}}', 'auto');
-			ga('send', 'pageview');
+		</script>
+
+		<!-- Application -->
+		<script src="dist/aris.js?{{js_signature}}"></script>
+		<script>
+		  require(['main']);
 		</script>
 	</body>
 </html>
