removed index.html from index

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ scripts/config*.js
 !scripts/config.js.template
 scripts/tracker*.js
 !scripts/tracker.js.template
+index.html
 node_modules
 
 .DS_Store
