--- a/index.html.template
+++ b/index.html.template
@@ -1,109 +1,107 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="description" content="ARIS Web Editor">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="ARIS Web Editor">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!-- Bootstrap CDN CSS -->
-		<!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
-		<link rel="stylesheet" href="styles/bootstrap.css">
-		<link rel="stylesheet" href="styles/arisjs.css?{{css_signature}}">
+    <!-- Bootstrap CDN CSS -->
+    <!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="styles/bootstrap.css">
+    <link rel="stylesheet" href="styles/arisjs.css?{{css_signature}}">
 
-		<title>ARIS Editor</title>
+    <title>ARIS Editor</title>
 
-		<!-- Built:
-			{{build_date}}
-		-->
-	</head>
+    <!-- Built:
+      {{build_date}}
+    -->
+  </head>
 
-	<body>
-		<!-- TODO move this into a layout region -->
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="navbar-header">
-				<a class="aris-logo" href="#">
-					<img src="images/Aris-Horizontal251.png" title="ARIS Editor Build: {{build_date}}">
-				</a>
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#aris-collapse-menu">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-			</div>
+  <body>
+    <!-- TODO move this into a layout region -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="navbar-header">
+        <a class="aris-logo" href="#"> <img src="images/Aris-Horizontal251.png" title="ARIS Editor Build: {{build_date}}"> </a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#aris-collapse-menu">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
 
-			<div class="collapse navbar-collapse" id="aris-collapse-menu">
-				<div id="navigation" class="navbar-header">
-				</div>
+      <div class="collapse navbar-collapse" id="aris-collapse-menu">
+        <div id="navigation" class="navbar-header">
+        </div>
 
-				<!-- Move into user status region -->
-				<div id="user" class="navbar-header navbar-right">
-				</div>
-			</div>
-		</nav>
+        <!-- Move into user status region -->
+        <div id="user" class="navbar-header navbar-right">
+        </div>
+      </div>
+    </nav>
 
 
-		<!-- Breadcrumb/nav region ? -->
+    <!-- Breadcrumb/nav region ? -->
 
 
-		<!-- Application regions -->
+    <!-- Application regions -->
 
-		<div class="container-fluid full-height">
-			<div class="row full-height">
-				<div class="col-xs-2 full-height">
-					<div id="list" class="full-height"></div>
-				</div>
-				<div class="col-xs-7 full-height">
-					<div id="main" class="full-height"></div>
-				</div>
-				<div class="col-xs-3 full-height">
-					<div id="info" class="full-height"></div>
-				</div>
-			</div>
-		</div>
+    <div class="container-fluid full-height">
+      <div class="row full-height">
+        <div class="col-xs-2 full-height">
+          <div id="list" class="full-height"></div>
+        </div>
+        <div class="col-xs-7 full-height">
+          <div id="main" class="full-height"></div>
+        </div>
+        <div class="col-xs-3 full-height">
+          <div id="info" class="full-height"></div>
+        </div>
+      </div>
+    </div>
 
 
-		<!-- Modal dialog region -->
+    <!-- Modal dialog region -->
 
-		<div class="modal fade" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
-		  <div class="modal-dialog">
-			<div class="modal-content">
+    <div class="modal fade" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
+      <div class="modal-dialog">
+      <div class="modal-content">
 
-				<div class="modal-header" style="display: none">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title" id="modal-title"></h4>
-				</div>
+        <div class="modal-header" style="display: none">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="modal-title"></h4>
+        </div>
 
-				<div class="modal-body" id="modal-body"></div>
+        <div class="modal-body" id="modal-body"></div>
 
-				<!--<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-					<button type="button" class="btn btn-primary">Save</button>
-				</div>-->
-			</div>
-		  </div>
-		</div>
+        <!--<div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>-->
+      </div>
+      </div>
+    </div>
 
-		<!-- Alert area -->
-		<div class="aris-alert alert alert-info" style="display: none">
-		</div>
+    <!-- Alert area -->
+    <div class="aris-alert alert alert-info" style="display: none">
+    </div>
 
-		<!-- google maps api. move to requireJS -->
-		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <!-- google maps api. move to requireJS -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-			ga('create', '{{google_analytics}}', 'auto');
-		</script>
+      ga('create', '{{google_analytics}}', 'auto');
+    </script>
 
-		<!-- Application -->
-		<script src="dist/aris.js?{{js_signature}}"></script>
-		<script>
-		  require(['main']);
-		</script>
-	</body>
+    <!-- Application -->
+    <script src="dist/aris.js?{{js_signature}}"></script>
+    <script>
+      require(['main']);
+    </script>
+  </body>
 </html>
