--- a/index.html.template
+++ b/index.html.template
@@ -96,6 +96,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', '{{google_analytics}}', 'auto');
+      ga('send','pageview');
     </script>
 
     <!-- Application -->
