--- a/scripts/config.js.template
+++ b/scripts/config.js.template
@@ -16,6 +16,7 @@ define(
       */
 
       "google_analytics_key": "XX-########-#",
+      "google_maps_key": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
       "compress": true,
 
     };
