--- a/index.html.template
+++ b/index.html.template
@@ -96,7 +96,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', '{{google_analytics}}', 'auto');
-      ga('send','pageview');
+      //ga('send','pageview'); //don't send here- pageviews get sent by router
     </script>
 
     <!-- Application -->
