game export button

--- a/scripts/config.js.template
+++ b/scripts/config.js.template
@@ -6,7 +6,7 @@ define(
 
     return {
       "aris_api_url": base_url + "json.php/v2.",
-      "migration_api_url": base_url + "services/migration/",
+      "migration_api_url": base_url + "json.php/migration.",
 
       /*
         Note- the following lines will be parsed by a simple pre-processor
